--- a/PersistenceApp/Application/Application.csproj
+++ b/PersistenceApp/Application/Application.csproj
@@ -16,4 +16,9 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Algorithms\Searching\" />
+    <Folder Include="Algorithms\Sorting\" />
+  </ItemGroup>
+
 </Project>
